package ar.utnba.ddsi.depoautomatizado.models.entities.recorridos.obstaculos;

import ar.utnba.ddsi.depoautomatizado.models.entities.robots.Adapter.RobotAdapter;
import ar.utnba.ddsi.depoautomatizado.models.entities.robots.Robot;

public class EsquivarObstaculoStrategy implements EstrategiaObstaculo {
    
    @Override
    public void manejarObstaculo(RobotAdapter robot) {
        robot.esquivarObstaculo();
    }
} 